netbeans se colgo 3 horas desperdiciadas!

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /java/WFBSv01/build/
 /java/radioTaxi/build/
 /java/radioTaxi/nbproject/private/
+/java/WFBSv02/nbproject/private/
+/java/WFBSv02/build/
