--- a/java/WFBSv03/nbproject/project.properties
+++ b/java/WFBSv03/nbproject/project.properties
@@ -57,6 +57,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.ojdbc7.jar=../ojdbc7.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -77,5 +78,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.ojdbc7.jar=../ojdbc7.jar
 src.dir=src
 test.src.dir=test
