menu contextual & tabla usuarios

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 /java/WFBS-FX-0.1/build/
 /java/WFBS-0.4/nbproject/private/
 /java/WFBS-0.4/build/
+/java/TestingFunctions/nbproject/private/
+/java/TestingFunctions/build/
+/java/TestingFunctions/dist/
