rearrange java folder

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@
 /java/TestingFunctions/nbproject/private/
 /java/TestingFunctions/build/
 /java/TestingFunctions/dist/
+/java/swing/WFBS-0.4/build/
+/java/swing/WFBS-0.4/nbproject/private/
+/java/swing/WFBSv03/build/
+/java/swing/WFBSv03/dist/
+/java/swing/WFBSv03/nbproject/private/
