no dormí, fucking hash+salt+jar+ide

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 /java/swing/WFBSv03/build/
 /java/swing/WFBSv03/dist/
 /java/swing/WFBSv03/nbproject/private/
+/java/SEC-0.1/nbproject/private/
+/java/SEC-0.1/build/
+/java/SEC-0.1/dist/
