--- a/java/WFBS-FX-0.1/nbproject/project.properties
+++ b/java/WFBS-FX-0.1/nbproject/project.properties
@@ -82,7 +82,6 @@ javafx.enable.concurrent.external.runs=false
 # This is a JavaFX project
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
-# Main class for JavaFX
 javafx.main.class=PL.Login
 javafx.preloader.class=
 # This project does not use Preloader
@@ -109,7 +108,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-native.bundling.enabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
