--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@
 /java/SEC-0.1/nbproject/private/
 /java/SEC-0.1/build/
 /java/SEC-0.1/dist/
+/java/TestHash/nbproject/private/
+/java/TestHash/build/
+/java/TestHash/dist/
