fix jefe treeview add listener(funcionario, area, competencia, niveles)

--- a/java/SEC-Arrays/nbproject/project.properties
+++ b/java/SEC-Arrays/nbproject/project.properties
@@ -30,12 +30,15 @@ dist.jar=${dist.dir}/SEC-Arrays.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-20160810.jar=../../../../Users/iosep/Dropbox/joy3p0/java/json/json-20160810.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.ApacheHttp.classpath}:\
+    ${file.reference.json-20160810.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -112,7 +115,6 @@ mkdist.disabled=false
 native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
-    ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
 run.test.classpath=\
