--- a/java/SEC/nbproject/project.properties
+++ b/java/SEC/nbproject/project.properties
@@ -41,7 +41,7 @@ javac.classpath=\
     ${file.reference.json-20160810.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
