finish, change libraries folder

--- a/java/SEC/nbproject/project.properties
+++ b/java/SEC/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.jar=${dist.dir}/SEC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20160810.jar=../../../../Users/iosep/Dropbox/joy3p0/java/json/json-20160810.jar
+file.reference.json-20160810.jar=../Libs/json/json-20160810.jar
 file.reference.poi-3.15.jar=../Libs/poi/poi-3.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -39,8 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.ApacheHttp.classpath}:\
-    ${file.reference.json-20160810.jar}:\
-    ${file.reference.poi-3.15.jar}
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.json-20160810.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
